RT-18532: Tweak to Leader figure code on 1 page

--- a/content/education/EPIC/stem-evaluation-services.html
+++ b/content/education/EPIC/stem-evaluation-services.html
@@ -238,8 +238,6 @@ Style guide: components.weteachcs.card
     <hr />
     <p>
         Our evaluation approach is highly participatory in order to provide meaningful, actionable information. We collaborate with school administrators, project managers, staff, and key stakeholders to help shape the evaluation, inform data collection methods, and effectively use findings for program improvement.</p>
-    <p>
-        Please contact <a href="/web/website/about/directory/lisa-garbrecht">Dr. Lisa Garbrecht</a> at <a href="mailto:lgarbrecht@tacc.utexas.edu">lgarbrecht@tacc.utexas.edu</a> to discuss how we can meet your evaluation and research needs.</p>
     <hr />
     <style id="o-gallery-styles" type="text/css">
     /*
@@ -279,7 +277,7 @@ Style guide: components.weteachcs.card
         <figure class="weteachcs-card weteachcs-card--highlight">
             <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/lisa-garbrecht.jpeg/">
             <figcaption class="weteachcs-card__content">
-                Please contact <a href="https://www.tacc.utexas.edu/about/directory/lisa-garbrecht">Dr. Lisa Garbrecht</a>, EPIC's Director of STEM Evaluation Services, at lgarbrecht@tacc.utexas.edu to discuss how we can meet your evaluation and research needs.</figcaption>
+                Please contact <a href="https://www.tacc.utexas.edu/about/directory/lisa-garbrecht">Dr. Lisa Garbrecht</a>, EPIC's Director of STEM Evaluation Services, at <a href="mailto:lgarbrecht@tacc.utexas.edu">lgarbrecht@tacc.utexas.edu</a> to discuss how we can meet your evaluation and research needs.</figcaption>
         </figure>
     </div>
 </section>
