--- a/content/education/EPIC/stem-evaluation-services.html
+++ b/content/education/EPIC/stem-evaluation-services.html
@@ -1,17 +1,6 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
-/* WARN: Duplicated in:
-    - `epic`
-    - `epic/stem-evaluation-services`
-    - `epic/research`
-    - `epic/research/presentations-and-publications`
-    - `epic/weteachcs/about`
-    - `epic/weteachcs/about/projects`
-    - `epic/weteachcs/certification`
-    - `epic/weteachcs/goals-and-outcomes`
-    - `epic/funders-and-project-partners`
-    - `epic/code.org`
-*/
+/* WARNING: Duplicated in other pages */
 /*
 WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
 
@@ -54,17 +43,15 @@ Style guide: components.weteachcs
 .weteachcs-content dt small {
     font-weight: normal;
     font-size: 100%;
+}
+
+/* Add buffer between (margin-less) figcaption content and media it follows */
+.weteachcs-content + .o-gallery > * {
+    /* text-align: center; */
 }</style>
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
-/* WARN: Duplicated in:
-    - `epic`
-    - `epic/stem-evaluation-services`
-    - `epic/research`
-    - `epic/research/presentations-and-publications`
-    - `epic/weteachcs`
-    - `epic/weteachcs/goals-and-outcomes`
-*/
+/* WARNING: Duplicated in other pages */
 /*
 WeTeach CS - Card
 
@@ -133,6 +120,11 @@ Style guide: components.weteachcs.card
 .col-sm-12:not(:only-child) .weteachcs-card__media {
     /* Add space between image and content beneath */
     padding-bottom: 15px; /* Horizontal padding from `.col` (via `tacc-new-theme/css/main.css`) */
+}
+
+/* Add buffer between (margin-less) figcaption content and media it follows */
+.weteachcs-card__media + figcaption.weteachcs-card__content {
+    margin-top: 0.5em;
 }</style>
 <section class="weteachcs-content">
     <div class="weteachcs-card weteachcs-card--highlight">
@@ -238,7 +230,8 @@ Style guide: components.weteachcs.card
     <hr />
     <p>
         Our evaluation approach is highly participatory in order to provide meaningful, actionable information. We collaborate with school administrators, project managers, staff, and key stakeholders to help shape the evaluation, inform data collection methods, and effectively use findings for program improvement.</p>
-    <hr />
+    <h3>
+        Contact</h3>
     <style id="o-gallery-styles" type="text/css">
     /*
     Gallery (Object)
@@ -269,11 +262,11 @@ Style guide: components.weteachcs.card
         grid-gap: var(--grid-gap);
     }
     .o-gallery--shrink-wrap {
-        --min-item-width: 225px;
+        --min-item-width: auto;
 
-        grid-template-columns: minmax(var(--min-item-width),min-content);
+        grid-template-columns: minmax(var(--min-item-width), min-content);
     }</style>
-    <div class="o-gallery o-gallery--shrink-wrap">
+    <div class="o-gallery o-gallery--shrink-wrap" style="--min-item-width: 225px">
         <figure class="weteachcs-card weteachcs-card--highlight">
             <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/lisa-garbrecht.jpeg/">
             <figcaption class="weteachcs-card__content">
