Noop: CSS indentation & comments site-wide updates

--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -643,16 +643,8 @@
 					<li>…</li>
 				</ul>
 				*/
-				/* WARN: Duplicated in:
-					- `stem-programs/code-at-tacc/cybersecurity`
-					- `stem-programs/code-at-tacc/cybersecurity-comptia`
-					- `epic/funders-and-project-partners`
-				*/
-				/* WARN: Re-built in:
-					- `epic`
-					- `epic/weteachcs`
-					- `epic/stem-evaluation-services`
-				*/
+				/* WARNING: Duplicated in other pages */
+				/* WARNING: Re-built in other pages */
 				.o-gallery {
 					--grid-gap: 30px;
 					--min-item-width: 300px;
@@ -663,21 +655,17 @@
 					justify-items: center;
 					align-items: center;
 				}</style>
-			<style id="s-gallery-styles" type="text/css">
-			/*
+				<style id="s-gallery-styles" type="text/css">
+				/*
 				Gallery (Scope)
 		
 				Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
 				*/
-				/* WARN: Duplicated in:
-					- `stem-programs/code-at-tacc/cybersecurity`
-					- `stem-programs/code-at-tacc/cybersecurity-comptia`
-					- `epic/funders-and-project-partners`
-				*/
+				/* WARNING: Duplicated in other pages */
 				.s-gallery li {
 					list-style-type: none;
 				}</style>
-			<style id="cybersecurity-unique-gallery-styles" type="text/css">
+				<style id="cybersecurity-unique-gallery-styles" type="text/css">
 				.o-gallery {
 					--grid-gap: 25px;
 					/* FAQ: This variable is borrowed from `.s-gallery` */
