--- a/content/education/EPIC/stem-evaluation-services.html
+++ b/content/education/EPIC/stem-evaluation-services.html
@@ -43,11 +43,6 @@ Style guide: components.weteachcs
 .weteachcs-content dt small {
     font-weight: normal;
     font-size: 100%;
-}
-
-/* Add buffer between (margin-less) figcaption content and media it follows */
-.weteachcs-content + .o-gallery > * {
-    /* text-align: center; */
 }</style>
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
@@ -247,16 +242,8 @@ Style guide: components.weteachcs.card
         <li>Grapes</li>
     </ul>
     */
-    /* WARN: Duplicated in:
-        - `stem-programs/code-at-tacc/cybersecurity`
-        - `stem-programs/code-at-tacc/cybersecurity-comptia`
-        - `epic/funders-and-project-partners`
-    */
-    /* WARN: Re-built in:
-        - `epic`
-        - `epic/weteachcs`
-        - `epic/stem-evaluation-services`
-    */
+    /* WARNING: Duplicated in other pages */
+    /* WARNING: Over-engineered in other pages */
     .o-gallery {
         display: grid;
         grid-gap: var(--grid-gap);
