--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -471,16 +471,8 @@
 							<li>…</li>
 						</ul>
 						*/
-						/* WARN: Duplicated in:
-							- `stem-programs/code-at-tacc/cybersecurity`
-							- `stem-programs/code-at-tacc/cybersecurity-comptia`
-							- `epic/funders-and-project-partners`
-						*/
-						/* WARN: Re-built in:
-							- `epic`
-							- `epic/weteachcs`
-							- `epic/stem-evaluation-services`
-						*/
+						/* WARNING: Duplicated in other pages */
+						/* WARNING: Re-built in other pages */
 						.o-gallery {
 							--grid-gap: 30px;
 							--min-item-width: 300px;
@@ -497,11 +489,7 @@
 			
 						Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
 						*/
-						/* WARN: Duplicated in:
-							- `stem-programs/code-at-tacc/cybersecurity`
-							- `stem-programs/code-at-tacc/cybersecurity-comptia`
-							- `epic/funders-and-project-partners`
-						*/
+						/* WARNING: Duplicated in other pages */
 						.s-gallery li {
 							list-style-type: none;
 						}			</style>
