RT-18594: Virginia Trueheart (new area)

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1303,7 +1303,7 @@
 			<td>
 				<a href="mailto:vtrueheart@tacc.utexas.edu">vtrueheart@tacc.utexas.edu</a></td>
 			<td>
-				HPC Applications</td>
+				HPC Frontline Group</td>
 		</tr>
 		<tr>
 			<td>
