--- a/content/about/jobs.html
+++ b/content/about/jobs.html
@@ -61,6 +61,22 @@
 		</div>
 	</div>
 
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="systems-administrator-ii" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#systems-administrator-ii" role="button">Systems Administrator II</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="systems-administrator-ii" role="tabpanel">
+			<div class="panel-body">
+				<p>Provide Linux systems administration and hardware support for HPC systems.Interact in a multi-vendor, high performance computing environment that includes petascale HPC and storage systems and high-speed networking infrastructure.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-II_R_00006714" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
