RT-18678: Add Adam Gaither staff

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -485,6 +485,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/adam-gaither">Gatiher, Adam</a></td>
+			<td>
+				<a href="mailto:agaither@tacc.utexas.edu">agaither@tacc.utexas.edu</a></td>
+			<td>
+				Strategic Initiatives</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/kelly-gaither">Gaither, Kelly</a></td>
 			<td>
 				<a href="mailto:kelly@tacc.utexas.edu">kelly@tacc.utexas.edu</a></td>
