RT-18714: Add three jobs

--- a/content/about/jobs.html
+++ b/content/about/jobs.html
@@ -30,6 +30,55 @@
 <!--<p><b>No open positions at this time.</b></p>-->
 <div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
 
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="engineering-scientist-associate" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#engineering-scientist-associate" role="button">Engineering Scientist Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="engineering-scientist-associate" role="tabpanel">
+			<div class="panel-body">
+				<p>Position will work on software development tasks including front-, middle- and back-end tiers.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00011186" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="research-engineering-scientist-associate-iv" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-engineering-scientist-associate-iv" role="button">Research Engineering&#x2F;Scientist Associate IV</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iv" role="tabpanel">
+			<div class="panel-body">
+				<p>This position will contribute to research, development, and support activities involving big data analysis, statistical analysis, and machine learning technologies and the interfaces by which users can transparently harness these techniques and technologies for the Scalable Computational Intelligence (SCI) group at TACC.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-IV_R_00011152" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="junior-security-analyst" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#junior-security-analyst" role="button">Junior Security Analyst</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="junior-security-analyst" role="tabpanel">
+			<div class="panel-body">
+				<p>The Junior Security Analyst position in the Technology Infrastructure group at the Texas Advanced Computing Center (TACC) will provide network vulnerability testing, monitoring and network security compliance audits to ensure best practices are in use and network systems comply with TACC security policies.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Junior-Security-Analyst_R_00011184" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -76,6 +125,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
