--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -805,6 +805,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/junjie-li">Li, Junjie</a></td>
+			<td>
+				<a href="mailto:jli@tacc.utexas.edu">jli@tacc.utexas.edu</a></td>
+			<td>
+				HPC Software Tools</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/susan-lindsey">Lindsey, Susan </a></td>
 			<td>
 				<a href="mailto:slindsey@tacc.utexas.edu">slindsey@tacc.utexas.edu</a></td>
