RT-18751: EPIC table data updates

--- a/content/education/EPIC/Research/presentations.html
+++ b/content/education/EPIC/Research/presentations.html
@@ -435,6 +435,45 @@ Style guide: components.weteachcs.table
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/lgeim5ohi2k6d6s56siufy79quj8sw4g" target="_blank" >View</a></td>
             </tr>
+            <tr>
+                <td class="weteachcs-table__date">
+                    September 2019</td>
+                <td class="weteachcs-table__title">
+                    Increasing Diversity in Computing: Sharing Good Practices</td>
+                <td class="weteachcs-table__place">
+                    2019 Richard Tapia Celebration of Diversity in Computing Conference, Dallas, TX</td>
+                <td class="weteachcs-table__cite">
+                    <span>Taylor</span>, <span> V</span>, <span> Ladner</span>, <span> R.</span>, <span> Gates</span>, <span> A.</span>, <span> Robinson</span>, <span> R.</span>, <span> Howard</span>, <span> A.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Gilbert</span>, <span> J.</span>, <span> Fernandez</span>, <span> J.</span>, <span> & Payton</span>, <span> J.</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    </td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
+                    September 2020</td>
+                <td class="weteachcs-table__title">
+                    Collaborative Projects and Narratives on Broadening Participation in Computing</td>
+                <td class="weteachcs-table__place">
+                    2020 Richard Tapia Celebration of Diversity in Computing Conference, Dallas, TX</td>
+                <td class="weteachcs-table__cite">
+                    <span>Diaz</span>, <span> L.</span>, <span> Forbes</span>, <span> J.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Parker</span>, <span> M.</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/a18a0a7wfh7g9kaklz84bug33r3hwrfg" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
+                    July 2020</td>
+                <td class="weteachcs-table__title">
+                    Lessons from the Field, Resources to Advance Broadening Participation in Computing Efforts</td>
+                <td class="weteachcs-table__place">
+                    PEARC&#39;20: Practice and Experience in Advanced Research Computing Conference, Portland, OR.</td>
+                <td class="weteachcs-table__cite">
+                    <span>Dunton</span>, <span> S.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Goodhue</span>, <span> J.</span>, <span> Franklin</span>, <span> C.</span>, <span> Forbes</span>, <span> J.</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    </td>
+            </tr>
         </tbody>
     </table>
     
