--- a/content/education/EPIC/Research/publications.html
+++ b/content/education/EPIC/Research/publications.html
@@ -160,9 +160,9 @@ Style guide: components.weteachcs.table
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
-                    Fletcher, C.L. &amp; Romchand, R. (2018). &quot;Preparing Texas Students for the Cyber Economy&quot;. Austin, TX: The University of Texas at Austin. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research&#x2F;presentations-and-publications</td>
+                    Fletcher, C.L. &amp; Ramchand, R. (2018). &quot;Preparing Texas Students for the Cyber Economy&quot;. Austin, TX: The University of Texas at Austin. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research&#x2F;presentations-and-publications</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/nmzcuk0t1oczyurq6vp0zfh4hmybey4q" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi" target="_blank" >View</a></td>
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
@@ -175,6 +175,30 @@ Style guide: components.weteachcs.table
                     Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). &quot;Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher&quot; [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/x42l5yd4ihmloonm5130sy5x3b1qqf6n" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Adrion, W.R., Dunton, S., Ericson, B., Fall, R., Fletcher, C., Guzdial, M. (2020, December) U.S. States Must Broaden Participation While Expanding Access to Computer Science Education. Communications of the ACM, 63(12), 22-25, doi:10.1145&#x2F;3430375</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/mr4kfucsgaonoav6dyl9r8v6qkj0zk2r" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Cuny, J. E., Payton, J., Gates, A., Fletcher, C. L., &amp; Peterfreund, A. (2020). National CS Ed Equity-Focused Consortia and Their Value to the Community. Proceedings of the 51st ACM Technical Symposium on Computer Science Education, Portland, OR, USA. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3328778.3366982</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/uqapl25bugcexr9kvj4ls84fvh7zz9ni" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) &quot;Reflections on Launching a Networked Improvement Community with Computer Science Educators&quot;. Paper presented at RESPECT , Portland, OR, USA. http:&#x2F;&#x2F;respect2020.stcbp.org&#x2F;digital-proceedings&#x2F;</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/xj3f689af5dc5rq7emgft3w6pwcbf67k" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Odom-Bartel, R., Fletcher, C., Owen, J., Gray, J., &amp; Zelkowski, J. (February, 2020). &quot;Preparing Pre-Service Teacher Candidates for the Praxis Exam: An Innovative Model of Blended Support&quot;. SIGCSE’20: Proceedings of the 51st ACM Technical Symposium on Computer Science Education, pp 1298. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3328778.3372654</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/7fa1xoniqos8nxyueumo1trhl5d8qnrn" target="_blank" >View</a></td>
             </tr>
         </tbody>
     </table>
