RT-18738: Update Remy Scott Bio

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1167,9 +1167,9 @@
 			<td>
 				<a href="/web/website/about/directory/remy-scott">Scott, Remy</a></td>
 			<td>
-				<a href="mailto:scottre@tacc.utexas.edu ">scottre@tacc.utexas.edu </a></td>
+				<a href="mailto:scottre@tacc.utexas.edu">scottre@tacc.utexas.edu</a></td>
 			<td>
-				Networking, Security &amp; Operations</td>
+				High Performance Computing</td>
 		</tr>
 		<tr>
 			<td>
