RT-18744: Add staff Imran Moolla

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -957,6 +957,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/imran-moolla">Moolla, Imran</a></td>
+			<td>
+				<a href="mailto:imoolla@tacc.utexas.edu">imoolla@tacc.utexas.edu</a></td>
+			<td>
+				Large Scale Systems</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/paul-navratil">Navratil, Paul</a></td>
 			<td>
 				<a href="mailto:pnav@tacc.utexas.edu">pnav@tacc.utexas.edu</a></td>
