Quick: Fix erroneous link

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -785,7 +785,7 @@
 			<td>
 				<a href="mailto:sleal@tacc.utexas.edu">sleal@tacc.utexas.edu</a></td>
 			<td>
-				<a name="L">Networking, Security &amp; Operations</a></td>
+				<a name="L"></a>Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
