Quick: Directory: Fix/Consistent <a name>'s

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -77,11 +77,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/suzanne-bailey">Bailey, Suzanne</a><a name="B"></a></td>
+				<a href="/web/website/about/directory/suzanne-bailey">Bailey, Suzanne</a></td>
 			<td>
 				<a href="mailto:suzanne@tacc.utexas.edu">suzanne@tacc.utexas.edu</a></td>
 			<td>
-				Center Operations &amp; Administration</td>
+				<a name="B"></a> Center Operations &amp; Administration</td>
 		</tr>
 		<tr>
 			<td>
@@ -105,7 +105,7 @@
 			<td>
 				<a href="mailto:bbarth@tacc.utexas.edu">bbarth@tacc.utexas.edu</a></td>
 			<td>
-				<a name="barth"></a> High Performance Computing</td>
+				High Performance Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -369,7 +369,7 @@
 			<td>
 				<a href="mailto:medeker@tacc.utexas.edu">medeker@tacc.utexas.edu</a></td>
 			<td>
-				<a name="E"></a>Networking, Security &amp; Operations</td>
+				<a name="E"></a> Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
@@ -401,7 +401,7 @@
 			<td>
 				<a href="mailto:eferlanti@tacc.utexas.edu">eferlanti@tacc.utexas.edu</a></td>
 			<td>
-				<a name="F"></a>Life Sciences Computing</td>
+				<a name="F"></a> Life Sciences Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -497,7 +497,7 @@
 			<td>
 				<a href="mailto:kelly@tacc.utexas.edu">kelly@tacc.utexas.edu</a></td>
 			<td>
-				<a name="gaither"></a> Visualization, Education &amp; Outreach</td>
+				Visualization, Education &amp; Outreach</td>
 		</tr>
 		<tr>
 			<td>
@@ -649,7 +649,7 @@
 			<td>
 				<a href="mailto:hempel@tacc.utexas.edu">hempel@tacc.utexas.edu</a></td>
 			<td>
-				User Services<a name="hempel"></a></td>
+				User Services</td>
 		</tr>
 		<tr>
 			<td>
@@ -705,7 +705,7 @@
 			<td>
 				<a href="mailto:mjacobson@tacc.utexas.edu">mjacobson@tacc.utexas.edu</a></td>
 			<td>
-				Expanding Pathways in Computing (EPIC)</td>
+				<a name="J"></a> Expanding Pathways in Computing (EPIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -745,7 +745,7 @@
 			<td>
 				<a href="mailto:akahn@tacc.utexas.edu">akahn@tacc.utexas.edu</a></td>
 			<td>
-				Life Sciences Computing</td>
+				<a name="K"></a> Life Sciences Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -785,7 +785,7 @@
 			<td>
 				<a href="mailto:sleal@tacc.utexas.edu">sleal@tacc.utexas.edu</a></td>
 			<td>
-				<a name="L"></a>Networking, Security &amp; Operations</td>
+				<a name="L"></a> Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
@@ -905,7 +905,7 @@
 			<td>
 				<a href="mailto:jnet@tacc.utexas.edu">jnet@tacc.utexas.edu</a></td>
 			<td>
-				<a name="mccord"></a> Center Operations &amp; Administration</td>
+				Center Operations &amp; Administration</td>
 		</tr>
 		<tr>
 			<td>
@@ -945,7 +945,7 @@
 			<td>
 				<a href="mailto:minyard@tacc.utexas.edu">minyard@tacc.utexas.edu</a></td>
 			<td>
-				<a name="minyard"></a> Advanced Computing Services: Large Scale Systems</td>
+				Advanced Computing Services: Large Scale Systems</td>
 		</tr>
 		<tr>
 			<td>
@@ -993,7 +993,7 @@
 			<td>
 				<a href="mailto:jbowen@tacc.utexas.edu">jbowen@tacc.utexas.edu</a></td>
 			<td>
-				Expanding Pathways in Computing</td>
+				<a name="O"></a> Expanding Pathways in Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -1081,7 +1081,7 @@
 			<td>
 				<a href="cramos@tacc.utexas.edu">cramos@tacc.utexas.edu</a></td>
 			<td>
-				<a name="R"></a>HPC Performance &amp; Architectures</td>
+				<a name="R"></a> HPC Performance &amp; Architectures</td>
 		</tr>
 		<tr>
 			<td>
@@ -1255,7 +1255,7 @@
 			<td>
 				<a href="mailto:dan@tacc.utexas.edu">dan@tacc.utexas.edu</a></td>
 			<td>
-				<a name="stanzione"></a>Associate Vice President of Research; Executive Director</td>
+				Associate Vice President of Research; Executive Director</td>
 		</tr>
 		<tr>
 			<td>
@@ -1479,7 +1479,7 @@
 			<td>
 				<a href="mailto:zzhang@tacc.utexas.edu">zzhang@tacc.utexas.edu</a></td>
 			<td>
-				<a name="Z"></a>Data Management &amp; Collections</td>
+				<a name="Z"></a> Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
