--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -3,7 +3,7 @@
 	Full Time Staff</h3>
 <center>
 	<p style="clear: both; font-size: 15px;">
-		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; <a href="/web/website/about/directory/#Q" style="text-decoration: none; font-size: 15px;">Q</a>&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; <a href="/web/website/about/directory/#V" style="text-decoration: none; font-size: 15px;">V</a>&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; <a href="/web/website/about/directory/#X" style="text-decoration: none; font-size: 15px;">X</a>&nbsp; Y&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
+		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; Q&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; <a href="/web/website/about/directory/#V" style="text-decoration: none; font-size: 15px;">V</a>&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; <a href="/web/website/about/directory/#X" style="text-decoration: none; font-size: 15px;">X</a>&nbsp; <a href="/web/website/about/directory/#Y" style="text-decoration: none; font-size: 15px;">Y</a>&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
 </center>
 <p>
 	&nbsp;</p>
@@ -1077,14 +1077,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/quan-yuan">Quan Yuan</a></td>
-			<td>
-				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
-			<td>
-				<a name="Q"></a> HPC</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/chris-ramos">Ramos, Chris</a></td>
 			<td>
 				<a href="cramos@tacc.utexas.edu">cramos@tacc.utexas.edu</a></td>
@@ -1475,11 +1467,19 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/quan-yuan">Yuan, Quan</a></td>
+			<td>
+				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
+			<td>
+				<a name="Y"></a> HPC</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/stephanie-zeller">Zeller, Stephanie</a></td>
 			<td>
 				<a href="mailto:szeller@tacc.utexas.edu">szeller@tacc.utexas.edu</a></td>
 			<td>
-				Scalable Visualization Technologies, Visualization Interfaces &amp; Applications</td>
+				<a name="Z"></a> Scalable Visualization Technologies, Visualization Interfaces &amp; Applications</td>
 		</tr>
 		<tr>
 			<td>
@@ -1487,7 +1487,7 @@
 			<td>
 				<a href="mailto:zzhang@tacc.utexas.edu">zzhang@tacc.utexas.edu</a></td>
 			<td>
-				<a name="Z"></a> Data Management &amp; Collections</td>
+				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
