RT-18992: Update REU COVID notice

--- a/content/reu--notice.html
+++ b/content/reu--notice.html
@@ -4,5 +4,5 @@
 }</style>
 <div class="portlet-msg-info">
 	<p>
-		In response to COVID-19, the CI Research 4 Social Change is prepared to offer a virtual REU Site in 2021.</p>
+		Out of concern for the health and safety of program participants, CI Research 4 Social Change REU will be virtual in 2021.</p>
 </div>
