RT-18825: Change Quan Yuan group

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1471,7 +1471,7 @@
 			<td>
 				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
 			<td>
-				<a name="Y"></a> HPC</td>
+				<a name="Y"></a> HPC Frontline Group</td>
 		</tr>
 		<tr>
 			<td>
